---
source: gvb_interp/src/vm.rs
expression: "run_with_file(r#\"\n10 open \"f\" output as 3\n20 input #3, a\n    \"#.trim(),\n              vec![(exec_error(1, 3, 14,\n                               \"INPUT 语句只能用于以 INPUT 模式打开的文件，\\\n              但 3 号文件是以 OUTPUT 模式打开的\"),\n                    None)], b\"f.DAT\",\n              File::new(b\"AB,\\\",ab\\xff12\\\"\\xff1e3\".to_vec()))"

---
open file "f.DAT", read: false, write: true, truncate: true
close file

